style.css
@font-face {
  font-family: 'roboto';
  src: url('fonts/roboto-regular-webfont.woff2') format('woff2'),
       url('fonts/roboto-regular-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
  display: grid;
  grid-template: 1fr 3fr / 1fr 4fr;
  font-family: "roboto", sans-serif;
}

.sidebar {
  grid-area: 1 / 1 / 3 / 2;
  background-color: #1992D4;
  color:#FFFFFF;
  font-size: 1rem;
  font-weight: bold;

  display: grid;
  grid-template-rows: 2fr 7fr 3fr 7fr;
  padding-top: 8%;
  padding-left: 8%;
  gap: 8%;
}

.sidebar .top-section,
.sidebar .bottom-section {
  display: grid;
  gap: 0.8rem;
}

.sidebar img {
  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(309deg) brightness(105%) contrast(103%);
}

.sidebar .dashboard,
.top-section div,
.bottom-section div {
  display: grid;
  grid-template-columns: 1fr 9fr;
  gap: 10%;
  align-items: center;
}

.sidebar .dashboard {
  grid-template-columns: 3fr 9fr;
  place-items: center;
  font-size: 1.2rem;
}

.dashboard > p {
  justify-self: start;
}


.header {
  background-color: #FFFFFF;
  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
  font-weight: bold;
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
  place-items: center;
  padding-left: 5%;
}

.header img,
.header .symbol {
  width: 20px;
}

.header .top-left {
  display: grid;
  grid-template-columns: 1fr 10fr;
  justify-self: stretch;
}

.top-left input[type="search"] {
  border: none;
  border-radius: 50px;
  height: 1.4rem;
  background-color: #E2E8F0;
}

.header .top-right,
.header .down-right {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
}

.top-right > .user-icon,
.user > .user-icon {
  border-radius: 50%;
  width: 40px;
}

.header .down-left{
  display: grid;
  grid-template-columns: 1fr 4fr;
  justify-self: start;
  justify-items: start;
  gap: 10%;
}

.down-left .user-icon  {
  border-radius: 50%;
  width: 60px;
}

.down-left .greeting {
  display: grid;
  justify-items: start;
}

.greeting p:nth-of-type(1) {
  font-size: 0.8rem;
}

.header .down-right {
  gap: 20%;
  display: flex;
  justify-content: space-around;
}
.down-right button {
  background-color: #1992D4;
  color: #FFFFFF;
  font-weight: bold;
  border: none;
  padding: 10px 20px;
  border-radius: 20px;
  
}

.main-content {
  background-color: #E2E8F0;
  display: grid;
  grid-template: 1fr / 2fr 1fr;
  padding-left: 2%;
  padding-right: 5%;
  padding-top: 2%; 
  gap: 2%;
}
.main-content h1,
.trending > h1 {
  font-weight: bold;
  color: rgb(53, 49, 49);
}

.main-content > .center {
  grid-area: 1 / 1 / 3;
  display: grid;
  grid-template-rows: 1fr 10fr;
}

.center .projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 5%;
}

.projects .project {
  background-color: #FFFFFF;
  border-radius: 5px;
  box-shadow: inset 8px 0 #F0B429;
  padding-left: 5%;
  display: grid;
  align-items: center;
  gap: 3%;
}

.projects h2,
.right h2 {
  font-weight: bold;
}

.projects p,
.right p,
.user-id p:nth-child(2) {
  color: #636363;
}

.project img {
  width: 20px;
}

.project .icons {
  width: 90%;
  display: grid;
  grid-auto-flow: column;
  gap: 5%;
  justify-content: end;
}

.project .text {
  display: grid;
  gap: 5%;
  place-items: start  ;
}

.main-content .right {
  grid-area: 1 / 2;
  display: grid;
  grid-template-rows: 1fr 5fr 5fr;
}

.right .announcements {
  background-color: #FFFFFF;
  border-radius: 5px;
  padding: 5%;  
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.announcements h2 {
  font-size: 0.8rem;
}

.announcements p {
  font-size: 0.7rem;
}

.announcements .announcement {
  padding: 5% 0 5% 0;
  border-bottom: solid 1px rgba(128, 128, 128, 0.3);
}

.announcements .announcement:last-child {
  border-bottom: none;
}

.trending {
  padding-top: 5%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.trending .user-list {
  background-color: #FFFFFF;
  padding: 5%;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.user-list .user {
  display: grid;
  grid-template-columns: 1fr 5fr;
  gap: 10%;
} 

.user-id p:nth-child(1) {
  color: black;
}

.main-content .project,
.right .announcements,
.trending .user-list {
  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
}

